Font awesome integration by Bootstrap

--- a/css/main.css
+++ b/css/main.css
@@ -123,8 +123,7 @@
 .fa-search {
   color: white;
   font-size: 20px;
-  padding-top: 10px;
-  align-self: center;
+  margin-top: 9px;
   cursor: pointer;
 }
 
